# training-tracker

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.atl/: skill-registry.md
.github/workflows/: ci.yml
app/: .env.dev  composer.json  importmap.php  package-lock.json  package.json  playwright.config.ts
app/assets/: sw-register.js
app/config/: reference.php
app/public/: manifest.webmanifest  sw.js
app/src/Shared/Controller/: HomeController.php
app/src/Training/Domain/Exception/: InvalidSchemeException.php
app/src/Training/Domain/ValueObject/: RirScheme.php  WeekProgression.php
app/src/Training/Enum/: Equipment.php  MesocycleGoal.php  MuscleGroup.php  SetGroupType.php  SetModifier.php
app/src/Training/Service/: ExerciseSlugifier.php
app/templates/: base.html.twig
app/tests/: Pest.php
app/tests/Unit/: SmokeTest.php
app/tests/Unit/Training/Enum/: EquipmentTest.php  MesocycleGoalTest.php  MuscleGroupTest.php  SetGroupTypeTest.php  SetModifierTest.php
app/tests/e2e/: smoke.spec.ts
docker/: app.Dockerfile  nginx.conf
openspec/: config.yaml
openspec/changes/archive/2026-04-16-fase-0-setup/: archive-report.md  design.md  proposal.md  tasks.md
openspec/changes/fase-0-setup/: exploration.md  tasks.md  verify-report.md
openspec/changes/fase-1a-modelo-training/: design.md  exploration.md  proposal.md  tasks.md
sidecar-garmin/: Dockerfile  pyproject.toml
sidecar-garmin/src/sidecar/: main.py
sidecar-garmin/src/sidecar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sidecar-garmin/tests/: test_health.py
(+28 files in other folders)
