[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sidecar"
version = "0.1.0"
description = "Garmin Connect ingestion sidecar for Training Tracker."
requires-python = ">=3.12"
readme = { file = "../README.md", content-type = "text/markdown" }
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "N", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
